--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -6,4 +6,15 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
   body
+    nav.navbar.navbar-expand-lg.navbar-light
+      .container-fluid
+        a.navbar-brand(href='/') MyApp
+        button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
+          span.navbar-toggler-icon
+        #navbarNav.collapse.navbar-collapse
+          ul.navbar-nav.me-auto.mb-2.mb-lg-0
+            li.nav-item
+              a.nav-link(href='/') Home
+            li.nav-item
+              a.nav-link(href='/films') Films
     block content
