--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
   body
-    nav.navbar.navbar-expand-lg.navbar-light
+    nav.navbar.navbar-expand-lg.navbar-light.bg-light
       .container-fluid
         a.navbar-brand(href='/') MyApp
         button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
