added actors page and cast also added category to films

--- a/src/views/components/pagination.pug
+++ b/src/views/components/pagination.pug
@@ -4,7 +4,7 @@ if totalPages > 1
       ul.pagination
         if currentPage > 1
           li.page-item
-            a.page-link(href=`/films?search=${searchQuery}&page=${currentPage - 1}`) Previous
+            a.page-link(href=`/${path}?search=${searchQuery}&page=${currentPage - 1}`) Previous
         else
           li.page-item.disabled
             span.page-link Previous
@@ -17,10 +17,10 @@ if totalPages > 1
               span.page-link= page
           else
             li.page-item
-              a.page-link(href=`/films?search=${searchQuery}&page=${page}`)= page
+              a.page-link(href=`/${path}?search=${searchQuery}&page=${page}`)= page
         if currentPage < totalPages
           li.page-item
-            a.page-link(href=`/films?search=${searchQuery}&page=${currentPage + 1}`) Next
+            a.page-link(href=`/${path}?search=${searchQuery}&page=${currentPage + 1}`) Next
         else
           li.page-item.disabled
             span.page-link Next
