--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -17,4 +17,6 @@ html
               a.nav-link(href='/') Home
             li.nav-item
               a.nav-link(href='/films') Films
+            li.nav-item
+              a.nav-link(href='/actors') Actors
     block content
