--- a/src/views/components/search.pug
+++ b/src/views/components/search.pug
@@ -1,4 +1,4 @@
-form(method="GET", action="/films", class="mb-4")
+form(method="GET", action=`/${path}`, class="mb-4")
   .input-group
-    input.form-control(type="text", name="search", placeholder="Search films..." value=searchQuery)
+    input.form-control(type="text", name="search", placeholder=`Search ${path}...` value=searchQuery)
     button.btn.btn-outline-primary(type="submit") Search
