added auth pages

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -19,4 +19,10 @@ html
               a.nav-link(href='/films') Films
             li.nav-item
               a.nav-link(href='/actors') Actors
+          //- Later check if signed in and then show account details page
+          ul.navbar-nav.ms-auto
+            li.nav-item
+              a.nav-link(href='/login') Login
+            li.nav-item
+              a.nav-link(href='/register') Register
     block content
