--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,28 +1,34 @@
 doctype html
-html
+html(data-bs-theme="dark")
   head
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
   body
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    nav.navbar.navbar-expand-lg.shadow
       .container-fluid
-        a.navbar-brand(href='/') MyApp
+        a.navbar-brand(href='/') 
+          img(src='/images/logo.png', alt='Logo', width='52', height='52')
         button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarNav', aria-controls='navbarNav', aria-expanded='false', aria-label='Toggle navigation')
           span.navbar-toggler-icon
         #navbarNav.collapse.navbar-collapse
-          ul.navbar-nav.me-auto.mb-2.mb-lg-0
+          ul.navbar-nav.me-auto.mb-2.mb-lg-0.d-flex.align-items-center
             li.nav-item
-              a.nav-link(href='/') Home
+              a.nav-link.fs-5(href='/') Home
             li.nav-item
-              a.nav-link(href='/films') Films
+              a.nav-link.fs-5(href='/films') Films
             li.nav-item
-              a.nav-link(href='/actors') Actors
+              a.nav-link.fs-5(href='/actors') Actors
           //- Later check if signed in and then show account details page
-          ul.navbar-nav.ms-auto
+          ul.navbar-nav.ms-auto.d-flex.align-items-center
             li.nav-item
-              a.nav-link(href='/login') Login
+              a.nav-link.fs-5(href='/login') Login
             li.nav-item
-              a.nav-link(href='/register') Register
+              a.nav-link.fs-5(href='/register') Register
+            li.nav-item
+              button.btn.btn-link.nav-link.fs-5(type="button", id="themeToggle", aria-label="Toggle dark/light mode")
+                i.bi.bi-moon-fill#themeIcon
+            script(src="/javascripts/darkmode.js")
     block content
