--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -7,7 +7,7 @@ html(data-bs-theme="dark")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="icon", href="/images/favicon.ico", type="image/x-icon")
   body
-    nav.navbar.navbar-expand-lg.shadow
+    nav.navbar.navbar-expand-lg.shadow.border-bottom.border-body
       .container-fluid
         a.navbar-brand(href='/') 
           img(src='/images/logo.png', alt='Logo', width='52', height='52')
