--- a/src/views/auth/login.pug
+++ b/src/views/auth/login.pug
@@ -9,8 +9,8 @@ block content
             h2.mb-4.text-center Login
             form(action="/login" method="POST")
               .mb-3
-                label.form-label(for="username") Username
-                input#username.form-control(type="text" name="username" required placeholder="Enter your username")
+                label.form-label(for="email") Email
+                input#email.form-control(type="text" name="email" required placeholder="Enter your email")
               .mb-3
                 label.form-label(for="password") Password
                 input#password.form-control(type="password" name="password" required placeholder="Enter your password")
