--- a/src/views/film/film.pug
+++ b/src/views/film/film.pug
@@ -28,7 +28,4 @@ block content
           h1.display-4.mb-3 Cast
           .row.mt-4
             each actor in film.cast
-              .col-md-4.mb-4
-                a.card.h-100(href=`/actors/${actor.actor_id}`)
-                  .card-body
-                    h5.card-title= `${actor.first_name} ${actor.last_name}`
+              include ../components/actor_card
