backend auth logic

--- a/src/views/auth/account.pug
+++ b/src/views/auth/account.pug
@@ -4,7 +4,7 @@ block content
   .container.mt-5
     .row
       .col-md-8.offset-md-2.text-center
-        h1.display-4= `Welcome, ${user.firstName} ${user.lastName}!`
+        h1.display-4= `Welcome, ${user.first_name} ${user.last_name}!`
         p.lead Here you can manage your account settings.
         p.lead= `Email: ${user.email}`
         hr.my-4
