--- a/src/views/auth/register.pug
+++ b/src/views/auth/register.pug
@@ -22,9 +22,9 @@ block content
               .mb-3
                 label.form-label(for="password") Password
                 input#password.form-control(type="password" name="password" required placeholder="Create a password")
-              .mb-3
-                label.form-label(for="confirm_password") Confirm Password
-                input#confirm_password.form-control(type="password" name="confirm_password" required placeholder="Confirm your password")
+              //- .mb-3
+              //-   label.form-label(for="confirm_password") Confirm Password
+              //-   input#confirm_password.form-control(type="password" name="confirm_password" required placeholder="Confirm your password")
               button.btn.btn-primary.w-100(type="submit") Register
             .mt-3.text-center
               span Already have an account? 
