--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -26,6 +26,8 @@ html(data-bs-theme="dark")
             if isAuthenticated
               li.nav-item
                 a.nav-link.fs-5(href='/account') Account
+              li.nav-item
+                a.nav-link.fs-5(href='/rentals') Rentals
             else
               li.nav-item
                 a.nav-link.fs-5(href='/login') Login
