--- a/src/views/auth/account.pug
+++ b/src/views/auth/account.pug
@@ -4,9 +4,47 @@ block content
   .container.mt-5
     .row
       .col-md-8.offset-md-2.text-center
-        h1.display-4= `Welcome, ${user.first_name} ${user.last_name}!`
-        p.lead Here you can manage your account settings.
-        p.lead= `Email: ${user.email}`
-        hr.my-4
-        form(action="/logout", method="post")
-          button.btn.btn-danger(type="submit") Logout
+        //- h1.display-4= `Welcome, ${user.first_name} ${user.last_name}!`
+        //- p.lead Here you can manage your account settings.
+        .card.mb-4.shadow
+          .card-body
+            h5.card-title.mb-3 Update Account Data
+            form(action="/account/update", method="post")
+              if updateError
+                .alert.alert-danger= updateError
+              if updateSuccess
+                .alert.alert-success= updateSuccess
+              .form-group.d-flex.gap-3.mb-2
+                .w-50
+                  label(for="first_name") First Name
+                  input.form-control(type="text", name="first_name", id="first_name", value=user.first_name, required)
+                .w-50
+                  label(for="last_name") Last Name
+                  input.form-control(type="text", name="last_name", id="last_name", value=user.last_name, required)
+              .form-group
+                label(for="email") Email
+                input.form-control(type="email", name="email", id="email", value=user.email, required)
+              button.btn.btn-primary.mt-2(type="submit") Update Account
+        .card.mb-4.shadow
+          .card-body
+            h5.card-title.mb-3 Change Password
+            if passwordError
+              .alert.alert-danger= passwordError
+            if passwordSuccess
+              .alert.alert-success= passwordSuccess
+            form(action="/account/password", method="post")
+              .form-group.mb-2
+                label(for="current_password") Current Password
+                input.form-control(type="password", name="current_password", id="current_password", required)
+              .form-group.mb-2
+                label(for="new_password") New Password
+                input.form-control(type="password", name="new_password", id="new_password", required)
+              .form-group
+                label(for="confirm_password") Confirm New Password
+                input.form-control(type="password", name="confirm_password", id="confirm_password", required)
+              button.btn.btn-warning.mt-2(type="submit") Update Password
+        .d-flex.justify-content-between.mt-4.mb-4
+          form(action="/logout", method="post")
+            button.btn.btn-danger(type="submit") Logout
+          form(action="/account/delete", method="post", onsubmit="return confirm('Are you sure you want to delete your account? This action cannot be undone.');")
+            button.btn.btn-outline-danger(type="submit") Delete Account
