--- a/src/views/auth/account.pug
+++ b/src/views/auth/account.pug
@@ -42,7 +42,7 @@ block content
               .form-group
                 label(for="confirm_password") Confirm New Password
                 input.form-control(type="password", name="confirm_password", id="confirm_password", required)
-              button.btn.btn-warning.mt-2(type="submit") Update Password
+              button.btn.btn-primary.mt-2(type="submit") Update Password
         .d-flex.justify-content-between.mt-4.mb-4
           form(action="/logout", method="post")
             button.btn.btn-danger(type="submit") Logout
